--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "next": "15.0.3",
     "next-cloudinary": "^6.16.0",
     "qs": "^6.13.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "stripe": "^17.3.1",
     "svix": "^1.40.0",
