--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
     "@next/next/no-page-custom-font": "off",
     "@typescript-eslint/no-namespace": "off",
     "no-var": "error",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "prefer-spread": "off",
+    "prefer-const": "off"
   }
 }
